--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,12 @@
 body{
 background-image:url(../img/IMG_2801.JPG);
 background-size:cover;
-    
+filter: blur(5px);
+// Browser Specific
+-webkit-filter: blur(5px);
+-moz-filter: blur(5px);
+-o-filter: blur(5px);
+-ms-filter: blur(5px);
 }
 
 
