--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,45 @@
 
 
 @font-face {
+    font-family: 'open_sans';
+    src: url('../fonts/OpenSans-Regular-webfont.eot');
+    src: url('../fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/OpenSans-Regular-webfont.woff') format('woff'),
+         url('../fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
+         url('../fonts/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'open_sans';
+    src: url('../fonts/OpenSans-Bold-webfont.eot');
+    src: url('../fonts/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/OpenSans-Bold-webfont.woff') format('woff'),
+         url('../fonts/OpenSans-Bold-webfont.ttf') format('truetype'),
+         url('../fonts/OpenSans-Bold-webfont.svg#open_sansbold') format('svg');
+    font-weight: bold;
+    font-style: bold;
+
+}
+
+@font-face {
+    font-family: 'open_sans';
+    src: url('../fonts/OpenSans-Light-webfont.eot');
+    src: url('../fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/OpenSans-Light-webfont.woff') format('woff'),
+         url('../fonts/OpenSans-Light-webfont.ttf') format('truetype'),
+         url('../fonts/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
+    font-weight: lighter;
+    font-style: lighter;
+
+}
+
+p, div, input{
+font-family:'open_sans'!important;
+}
+@font-face {
     font-family: 'hiruko';
     src: url('../fonts/hiruko.eot');
     src: url('../fonts/hiruko.eot?#iefix') format('embedded-opentype'),
@@ -25,6 +64,7 @@ body { background-color:#f26c4f;
 }
 
 .logo{
+   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
    text-align:center; 
    display:inline;
 }
@@ -38,11 +78,19 @@ body { background-color:#f26c4f;
     
 }
 
-
-.btn {
-    float:left;
-    display:inline;
+.logo img{
+ float:right;
+display:inline;   
+    
 }
+
+.logo .btn{
+ float:left;
+width:60%!important;
+margin-top:15%;
+display:inline;   
+}
+
 
 
 
