--- a/css/main.css
+++ b/css/main.css
@@ -59,14 +59,28 @@ font-family:'open_sans'!important;
 }
 html { height: 100% 
 }
-body { background-color:#f26c4f;
+body {
        height: 100%; margin: 0px;
 }
-
+#bg {
+    -webkit-transform: translate3d(0, 0, 0);
+       background-image:url(../img/bg.jpg);
+       background-size:110%;
+       height: 100%; margin: 0px;
+       width:100%;
+        z-index:1;
+        position:absolute;
+    -webkit-filter: blur(10px);
+            filter: blur(10px);
+    
+}
 .logo{
+    -webkit-transform: translate3d(0, 0, 0);
    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
    text-align:center; 
+-webkit-transition: all 0.6s ease-in-out;
    display:inline;
+    z-index:99;
 }
 .block{
    font-family: 'hiruko';
