--- a/css/main.css
+++ b/css/main.css
@@ -68,11 +68,17 @@ body {
        background-size:110%;
        height: 100%; margin: 0px;
        width:100%;
-        z-index:1;
+        z-index:2;
+    -webkit-transition: all 0.6s ease-in-out;
         position:absolute;
+    opacity:1;
     -webkit-filter: blur(10px);
             filter: blur(10px);
     
+}
+#googleMap { 
+    height: 100%;
+    width:100%;
 }
 .logo{
     -webkit-transform: translate3d(0, 0, 0);
