--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ body {
 }
 #bg {
     -webkit-transform: translate3d(0, 0, 0);
-       background-color:#f26c4f;
+       background-color:#fefefe;
        height: 100%; margin: 0px;
        width:100%;
         z-index:2;
@@ -82,6 +82,7 @@ body {
     width:100%;
 }
 .logo{
+    color:#f26c4f;
     -webkit-transform: translate3d(0, 0, 0);
    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
    text-align:center; 
@@ -93,7 +94,7 @@ body {
    font-family: 'hiruko';
   display: block;
   font-size:10em;
-  color:#fff; 
+  color:#f26c4f; 
   text-align:center;
   line-height:80%;
     
